2007-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/glwidget.cpp: Add in display lists for
	renderQuick. Wraps all engines into one list for maximum speed.

	* libavogadro/src/engines/wireengine.[h,cpp]: Skip display lists,
	as glWidget now handles this for us.

	* libavogadro/src/elementtranslate.cpp: Fix US spelling of
	aluminum. Marcus can adjust accordingly in GB translation.

2007-12-12  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Don't use dynamic scaling to render
	the axes - cylinders were reduced to lines before.

	* libavogadro/src/engine.h: Added a renderQuick() function that
	focuses on rendering the molecule quickly for interactivity.

	* libavogadro/src/glpainter.cpp: Use a reduced quality when dynamic
	scaling is not used - 1/3rd of max for that quality right now.

	* libavogadro/src/glwidget.cpp: Adding new logic for dealing with
	display list caches, calling renderQuick correctly etc.

	* libavogadro/src/glwidget.*, avogadro/src/settingsdialog.ui,
	avogadro/src/settingsdialog.cpp, avogadro/src/mainwindow.*: Moved the
	debug information overlay to the GLWidget from the Engine.

	* libavogadro/src/engines/CMakeLists.txt,
	-libavogadro/src/engines/debugengine.*: Removed the debug engine.

2007-12-11  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glpainter.*: Added a dynamic scaling variable to the
	class and a setter. This turns dynamic scaling on (default) and off.

	* avogadro/src/CMakeLists.txt, libavogadro/src/CMakeLists.txt,
	+i18n/avogadro_en_GB.ts: Added a British English translation.

2007-12-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitive.h: New primitive types defined for
	"future expansion."

	* avogadro/src/extensions/gamessinputdialog.ui: Fix typos
	mentioned by Benoit.

	* avogadro/src/extensions/propmodel.cpp,
	avogadro/src/extensions/propextension.cpp: Minor fixes to get
	compilation working again.
